# src/api/docs/openapi/generated/openapi.json
@@ -29,6 +29,8 @@
           }
         },
         "required": [
+          "id",
+          "kanji_id",
           "ja-Hira",
           "ja-Latn"
         ]
@@ -44,7 +46,7 @@
             "type": "string",
             "example": "Vjo1a910QP"
           },
-          "ja-Kana": {
+          "ja-Hira": {
             "type": "string",
             "description": "Onyomi in katakana",
             "example": "イチ"
@@ -56,7 +58,9 @@
           }
         },
         "required": [
-          "ja-Kana",
+          "id",
+          "kanji_id",
+          "ja-Hira",
           "ja-Latn"
         ]
       },
@@ -103,6 +107,8 @@
           }
         },
         "required": [
+          "id",
+          "kanji_id",
           "word",
           "kanji",
           "romaji",
@@ -134,6 +140,7 @@
           }
         },
         "required": [
+          "id",
           "kanji",
           "stroke",
           "level"
@@ -152,6 +159,7 @@
           }
         },
         "required": [
+          "id",
           "name"
         ]
       }
